# nataf_gsa

./: .gitignore  CMakeLists.txt  dakota.json  dakota1.json  dakotaData.json  dakotaDataDiscrete.json  dakotaDataExact.json  data1.txt  data2.txt  main.cpp  my_functions.h  my_gsa.cpp  my_nataf.cpp  my_nataf.h  my_readjson.cpp  nataf_gsa.sln  nataf_gsa.vcxproj  nataf_gsa.vcxproj.filters  ops.out
Debug/: nataf_gsa.ilk
Debug/nataf_gsa.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  nataf_gsa.lastbuildstate
additional_files/applications/: WorkflowApplications.json
additional_files/exampleInputs/: dakota.json
additional_files/insideTemplatedir/: SimCenterInput.RV  dakota.json  test.tcl  workflow_driver.bat  workflow_driver_original.bat
additional_files/simCenterDprepo.cpp/: CMakeLists.txt
lib_mat/: CMakeLists.txt  gsa_bsxfun.cpp  gsa_bsxfun.h  gsa_combineVectorElements.cpp  gsa_combineVectorElements.h  gsa_eml_rand_mt19937ar_stateful.cpp  gsa_eml_rand_mt19937ar_stateful.h  gsa_eml_setop.cpp  gsa_eml_setop.h  gsa_heapsort.cpp  gsa_heapsort.h  gsa_insertionsort.cpp  gsa_insertionsort.h  gsa_introsort.cpp  gsa_introsort.h  gsa_mixGaussEm.cpp  gsa_mixGaussEm.h  gsa_mrdivide_helper.cpp  gsa_mrdivide_helper.h  gsa_mycholcov.cpp  gsa_mycholcov.h  gsa_mymvnpdf.cpp  gsa_mymvnpdf.h  gsa_qrsolve.cpp  gsa_qrsolve.h  gsa_rand.cpp  gsa_rand.h  gsa_runGSA.cpp  gsa_runGSA.h  gsa_runGSA_data.cpp  gsa_runGSA_data.h  gsa_runGSA_initialize.cpp  gsa_runGSA_initialize.h  gsa_runGSA_types.h  gsa_sparse.cpp  gsa_sparse.h  gsa_stack1.cpp  gsa_stack1.h  gsa_sum.cpp  gsa_sum.h  (+162 more)
