include_directories(${CMAKE_CURRENT_LIST_DIR})

add_library(libmat 
		   gsa_bsxfun.cpp
		   gsa_eml_rand_mt19937ar_stateful.cpp
		   gsa_heapsort.cpp
		   gsa_insertionsort.cpp
		   gsa_introsort.cpp
		   gsa_mixGaussEm.cpp
		   gsa_mrdivide_helper.cpp
		   gsa_mycholcov.cpp
		   gsa_mymvnpdf.cpp
		   gsa_qrsolve.cpp
		   gsa_rand.cpp
		   gsa_runGSA.cpp
		   gsa_runGSA_data.cpp
		   gsa_runGSA_initialize.cpp
		   gsa_sparse.cpp
		   gsa_stack1.cpp
		   gsa_unique.cpp
		   gsa_vvarstd.cpp
		   gsa_xgeqp3.cpp
		   gsa_xgetrf.cpp
		   gsa_xnrm2.cpp
		   gsa_xzgeqp3.cpp
		   ntf_ERADist.cpp
		   ntf_ERANataf.cpp
		   ntf_betaincinv.cpp
		   ntf_binodeviance.cpp
		   ntf_binopdf.cpp
		   ntf_cdf.cpp
		   ntf_cospiAndSinpi.cpp
		   ntf_erfcinv.cpp
		   ntf_expm1.cpp
		   ntf_fzero.cpp
		   ntf_gamma.cpp
		   ntf_gammainc.cpp
		   ntf_gammaincinv.cpp
		   ntf_gammaln.cpp
		   ntf_gevstat.cpp
		   ntf_icdf.cpp
		   ntf_inataf.cpp
		   ntf_inataf_data.cpp
		   ntf_inataf_initialize.cpp
		   ntf_inataf_rtwutil.cpp
		   ntf_mod.cpp
		   ntf_mrdivide_helper.cpp
		   ntf_mycholcov.cpp
		   ntf_nbinpdf.cpp
		   ntf_pdf.cpp
		   ntf_stirlerr.cpp
		   ntf_strcmp.cpp
		   ntf_svd.cpp
		   ntf_wblstat.cpp
		   ntf_xaxpy.cpp
		   ntf_xnrm2.cpp
		   ntf_xrotg.cpp
		   ntf_xzgeqp3.cpp
		   ntf_rand.cpp
		   ntf_eml_rand_mt19937ar_stateful.cpp
		   gsa_eml_setop.cpp
		   rtGetInf.cpp
		   rtGetNaN.cpp
		   rt_nonfinite.cpp)
